Bugfixes 2, electric boogaloo
Fixed a NullPointerException in MainNavigationRail.kt @ ln 109.
Fixed server browsing for Linux, spawnWorker() now detects native distributions of java.
Made launching Nuclear Option more reliable with thanks to GitHub user 'blacknight2u'.